# vecihi

./: .gitignore  README.md
nucleo-f401re/: .gitignore  output.txt
nucleo-f401re/VL53L8CX_SimpleRanging/: .mxproject  VL53L8CX_SimpleRanging.ioc
nucleo-f401re/VL53L8CX_SimpleRanging/Inc/: MPUXX50.h  main.h  stm32f4xx_it.h
nucleo-f401re/VL53L8CX_SimpleRanging/STM32CubeIDE/: .cproject  .project  VL53L8CX_SimpleRanging.launch
nucleo-f401re/VL53L8CX_SimpleRanging/Src/: app_tof.c  main.c
nucleo-f401re/VL53L8CX_serial_output/: .mxproject  .project  VL53L8CX_SimpleRanging.ioc
nucleo-f401re/VL53L8CX_serial_output/STM32CubeIDE/: .cproject  VL53L8CX_SimpleRanging.launch
nucleo-f401re/VL53L8CX_serial_output/Src/: app_tof.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
path_planning/: README.md  drone.py  sensor.py  simulator.py  vertical_cell_decomposition.py  world.py
path_planning/helpers/: decomposition.py  euler_tour.py  geometry.py  graph.py  maptools.py
path_planning/maps/: input_file  input_file_2  input_file_3  input_file_4  input_file_5  input_file_6  input_file_7
path_planning/prints/input_file/: tour_explanation.txt
path_planning/prints/input_file_2/: monitoring_summary (copy).txt  monitoring_summary.txt  tour_explanation.txt
path_planning/prints/input_file_3/: tour_explanation.txt
path_planning/prints/input_file_4/: tour_explanation.txt
path_planning/prints/input_file_5/: tour_explanation.txt
path_planning/prints/input_file_6/: bottle_locations.txt  monitoring_summary _bou_first_run.txt  (+6 more)
tofSLAM/: .gitignore  CMakeLists.txt  README.md  package.xml
tofSLAM/config/: ekf.yaml
tofSLAM/config/rviz-config/: map-visualizer.rviz
tofSLAM/data/: A0_ToF_data_pack.json  A1_ToF_data_pack.json  A2_ToF_data_pack.json  A3_ToF_data_pack.json  A4_ToF_data_pack.json  A5_ToF_data_pack.json  A6_ToF_data_pack.json  A7_ToF_data_pack.json  A8_ToF_data_pack.json  A9_ToF_data_pack.json  home.json
tofSLAM/include/: utility.h
tofSLAM/src/serial_listener/: serial_listener.cpp
tofSLAM/src/slam/: featureExtraction.cpp  slam.cpp
tofSLAM/src/tof/: tofNode.cpp
(+643 files in other folders)
